Sigil vNEXT TBA
    - Implement issue 183: Use a PCRE regular expression engine instead of QRegExp.
      Also fixes issue 498: regex '^' (start of line) broken.
    - Implement issue 168: Allow selection of multiple Meta Editor properties.
    - Allow for deleting multiple metadata items.
    - Implement issue 368: Pressing enter key on item in book browser should open item.
    - Refactor Find / Replace dialog into dock widget. Closes issues:
      961, 579, 666.
    - Fix issue 1005: Regression from change to ensure metdata element has dc namespace.

Sigil v0.4.2 2011.09.02
    - Fix issue 993: Split then selection jumps back to top instead of selection point.
    - Fix issue 988: fail to scroll properly after chapter split.
    - Allow users to disable Well-Formed checks or if they should be auto fixed as they
      were in 0.3.x.
    - Don't read use tidy setting from disk each time it's checked. Store the setting and
      save / load it upon edit and startup. This prevents Sigil from using the wrong value
      when multiple instances are open.
    - Use Pretty Print when auto fixing well formed errors.
    - Added a safety check to LoadTabContent() to ensure that focus changes don't cause a
      loss of non-well-formed data that has been entered but not saved.
    - Fix an issue where the opf namespace is being written in individual elements in the metadata
      section in the OPF. We're now going to clean and write the dc and opf namespaces directly
      to the metadata element when loading an OPF to ensure they're present and correct.
    - Fix for entities not being displayed when loading a file where they are saved as unicode
      in the file itself.
    - Fix for typo in code to preserve entities.
    - Fix for path encoding issue on reconstructing the opf.

Sigil v0.4.1 2011.08.26
    - Fix issue 615: implement undo for Find/Replace in Book View.
    - Update Toc section of manual for 0.4 Toc panel.